Update 2-2.html accessibility changes

--- a/teaching/300/2-2.html
+++ b/teaching/300/2-2.html
@@ -18,16 +18,16 @@
 <div class="ltx_page_content">
 <article class="ltx_document">
 <section id="S2" class="ltx_section">
-<h2 class="ltx_title ltx_title_section">
-<span class="ltx_tag ltx_tag_section">2 </span>Logical Reasoning</h2>
+<h1 class="ltx_title ltx_title_section">
+<span class="ltx_tag ltx_tag_section">2 </span>Logical Reasoning</h1>
 
 <section id="S2.SS2" class="ltx_subsection">
-<h3 class="ltx_title ltx_title_subsection">
-<span class="ltx_tag ltx_tag_subsection">2.2 </span>Logically Equivalent Statements</h3>
+<h2 class="ltx_title ltx_title_subsection">
+<span class="ltx_tag ltx_tag_subsection">2.2 </span>Logically Equivalent Statements</h2>
 
 <section id="S2.SS2.SSS1" class="ltx_subsubsection">
-<h4 class="ltx_title ltx_title_subsubsection">
-<span class="ltx_tag ltx_tag_subsubsection">2.2.1 </span>Beginning Activity 1 (Logically Equivalent Statements)</h4>
+<h3 class="ltx_title ltx_title_subsubsection">
+<span class="ltx_tag ltx_tag_subsubsection">2.2.1 </span>Beginning Activity 1 (Logically Equivalent Statements)</h3>
 
 <div id="S2.SS2.SSS1.p1" class="ltx_para">
 <p class="ltx_p">In Exercises (5) and (6) from <a href="https://johnweeks03.github.io/teaching/300/2-1.html">Section 2.1</a>, we observed situations where two different statements have the same truth tables. Basically, this means these statements are equivalent, and we make the following definition:</p>
@@ -92,8 +92,8 @@
 </div>
 </section>
 <section id="S2.SS2.SSS2" class="ltx_subsubsection">
-<h4 class="ltx_title ltx_title_subsubsection">
-<span class="ltx_tag ltx_tag_subsubsection">2.2.2 </span>Beginning Activity 2 (Converse and Contrapositive)</h4>
+<h3 class="ltx_title ltx_title_subsubsection">
+<span class="ltx_tag ltx_tag_subsubsection">2.2.2 </span>Beginning Activity 2 (Converse and Contrapositive)</h3>
 
 <div id="S2.SS2.SSS2.p1" class="ltx_para">
 <p class="ltx_p">We now define two important conditional statements that are associated with a given conditional statement.</p>
@@ -186,8 +186,8 @@
 </div>
 </section>
 <section id="S2.SS2.SSS3" class="ltx_subsubsection">
-<h4 class="ltx_title ltx_title_subsubsection">
-<span id="Theorem_2.5" class="ltx_tag ltx_tag_subsubsection">2.2.3 </span>Theorem 2.5 (De Morgan’s Laws)</h4>
+<h3 class="ltx_title ltx_title_subsubsection">
+<span id="Theorem_2.5" class="ltx_tag ltx_tag_subsubsection">2.2.3 </span>Theorem 2.5 (De Morgan’s Laws)</h3>
 
 <div id="S2.SS2.SSS3.p1" class="ltx_para">
 <p class="ltx_p">For statements <math id="S2.SS2.SSS3.p1.m1" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math> and <math id="S2.SS2.SSS3.p1.m2" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math>,</p>
@@ -271,8 +271,8 @@
 </div>
 </section>
 <section id="S2.SS2.SSS4" class="ltx_subsubsection">
-<h4 class="ltx_title ltx_title_subsubsection">
-<span class="ltx_tag ltx_tag_subsubsection">2.2.4 </span>Logical Equivalencies Related to Conditional Statements</h4>
+<h3 class="ltx_title ltx_title_subsubsection">
+<span class="ltx_tag ltx_tag_subsubsection">2.2.4 </span>Logical Equivalencies Related to Conditional Statements</h3>
 
 <div id="S2.SS2.SSS4.p1" class="ltx_para">
 <p class="ltx_p">The first two logical equivalencies in the following theorem were established in Beginning Activity 1, and the third logical equivalency was established in Beginning Activity 2.</p>
@@ -304,8 +304,8 @@
 </div>
 </section>
 <section id="S2.SS2.SSS5" class="ltx_subsubsection">
-<h4 class="ltx_title ltx_title_subsubsection">
-<span class="ltx_tag ltx_tag_subsubsection">2.2.5 </span>The Negation of a Conditional Statement</h4>
+<h3 class="ltx_title ltx_title_subsubsection">
+<span class="ltx_tag ltx_tag_subsubsection">2.2.5 </span>The Negation of a Conditional Statement</h3>
 
 <div id="S2.SS2.SSS5.p1" class="ltx_para">
 <p class="ltx_p">The logical equivalency <math id="S2.SS2.SSS5.p1.m1" class="ltx_Math" alttext="\neg(P\rightarrow Q)\equiv P\wedge\neg Q" display="inline"><mrow><mrow><mo>¬</mo><mrow><mo stretchy="false">(</mo><mrow><mi>P</mi><mo stretchy="false">→</mo><mi>Q</mi></mrow><mo stretchy="false">)</mo></mrow></mrow><mo>≡</mo><mrow><mi>P</mi><mo>∧</mo><mrow><mo rspace="0.167em">¬</mo><mi>Q</mi></mrow></mrow></mrow></math> is interesting because it shows us that the negation of a conditional statement is not another conditional statement. The negation of a conditional statement can be written in the form of a conjunction. So what does it mean to say that the conditional statement</p>
@@ -321,7 +321,7 @@
 <p class="ltx_p">For another example, consider the following conditional statement:</p>
 </div>
 <div id="S2.SS2.SSS5.p5" class="ltx_para">
-<table id="S2.Ex1" class="ltx_equation ltx_eqn_table">
+<table role="presentation" id="S2.Ex1" class="ltx_equation ltx_eqn_table">
 
 <tbody><tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
 <td class="ltx_eqn_cell ltx_eqn_center_padleft"></td>
@@ -334,7 +334,7 @@
 <p class="ltx_p">This conditional statement is false since its hypothesis is true and its conclusion is false. Consequently, its negation must be true. Its negation is not a conditional statement. The negation can be written in the form of a conjunction by using the logical equivalency <math id="S2.SS2.SSS5.p6.m1" class="ltx_Math" alttext="\neg(P\rightarrow Q)\equiv P\wedge\neg Q" display="inline"><mrow><mrow><mo>¬</mo><mrow><mo stretchy="false">(</mo><mrow><mi>P</mi><mo stretchy="false">→</mo><mi>Q</mi></mrow><mo stretchy="false">)</mo></mrow></mrow><mo>≡</mo><mrow><mi>P</mi><mo>∧</mo><mrow><mo rspace="0.167em">¬</mo><mi>Q</mi></mrow></mrow></mrow></math>. So, the negation can be written as follows:</p>
 </div>
 <div id="S2.SS2.SSS5.p7" class="ltx_para">
-<table id="S2.Ex2" class="ltx_equation ltx_eqn_table">
+<table role="presentation" id="S2.Ex2" class="ltx_equation ltx_eqn_table">
 
 <tbody><tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
 <td class="ltx_eqn_cell ltx_eqn_center_padleft"></td>
@@ -347,7 +347,7 @@
 <p class="ltx_p">However, the second part of this conjunction can be written in a simpler manner by noting that "not less than" means the same thing as "greater than or equal to." So we use this to write the negation of the original conditional statement as follows:</p>
 </div>
 <div id="S2.SS2.SSS5.p9" class="ltx_para">
-<table id="S2.Ex3" class="ltx_equation ltx_eqn_table">
+<table role="presentation" id="S2.Ex3" class="ltx_equation ltx_eqn_table">
 
 <tbody><tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
 <td class="ltx_eqn_cell ltx_eqn_center_padleft"></td>
@@ -361,8 +361,8 @@
 </div>
 </section>
 <section id="S2.SS2.SSS6" class="ltx_subsubsection">
-<h4 class="ltx_title ltx_title_subsubsection">
-<span class="ltx_tag ltx_tag_subsubsection">2.2.6 </span>Another Method of Establishing Logical Equivalencies</h4>
+<h3 class="ltx_title ltx_title_subsubsection">
+<span class="ltx_tag ltx_tag_subsubsection">2.2.6 </span>Another Method of Establishing Logical Equivalencies</h3>
 
 <div id="S2.SS2.SSS6.p1" class="ltx_para">
 <p class="ltx_p">We have seen that it is often possible to use a truth table to establish a logical equivalency. However, it is also possible to prove a logical equivalency using a sequence of previously established logical equivalencies. For example,</p>
@@ -403,8 +403,8 @@
 </div>
 </section>
 <section id="S2.SS2.SSS7" class="ltx_subsubsection">
-<h4 class="ltx_title ltx_title_subsubsection">
-<span class="ltx_tag ltx_tag_subsubsection">2.2.7 </span>Progress Check 2.7 (Working with a Logical Equivalency)</h4>
+<h3 class="ltx_title ltx_title_subsubsection">
+<span class="ltx_tag ltx_tag_subsubsection">2.2.7 </span>Progress Check 2.7 (Working with a Logical Equivalency)</h3>
 
 <div id="S2.SS2.SSS7.p1" class="ltx_para">
 <p class="ltx_p">In Section 2.1, we constructed a truth table for <math id="S2.SS2.SSS7.p1.m1" class="ltx_Math" alttext="(P\wedge\neg Q)\rightarrow R" display="inline"><mrow><mrow><mo stretchy="false">(</mo><mrow><mi>P</mi><mo>∧</mo><mrow><mo rspace="0.167em">¬</mo><mi>Q</mi></mrow></mrow><mo stretchy="false">)</mo></mrow><mo stretchy="false">→</mo><mi>R</mi></mrow></math>. See <a href="https://johnweeks03.github.io/teaching/300/2-1.html#Table_2.2">Table 2.2</a> in Section 2.1.</p>
@@ -417,7 +417,7 @@
 <p class="ltx_p">Although it is possible to use truth tables to show that <math id="S2.I9.i1.p1.m1" class="ltx_Math" alttext="P\rightarrow(Q\vee R)" display="inline"><mrow><mi>P</mi><mo stretchy="false">→</mo><mrow><mo stretchy="false">(</mo><mrow><mi>Q</mi><mo>∨</mo><mi>R</mi></mrow><mo stretchy="false">)</mo></mrow></mrow></math> is logically equivalent to <math id="S2.I9.i1.p1.m2" class="ltx_Math" alttext="(P\wedge\neg Q)\rightarrow R" display="inline"><mrow><mrow><mo stretchy="false">(</mo><mrow><mi>P</mi><mo>∧</mo><mrow><mo rspace="0.167em">¬</mo><mi>Q</mi></mrow></mrow><mo stretchy="false">)</mo></mrow><mo stretchy="false">→</mo><mi>R</mi></mrow></math>, we instead use previously proven logical equivalencies to prove this logical equivalency. In this case, it may be easier to start working with <math id="S2.I9.i1.p1.m3" class="ltx_Math" alttext="(P\wedge\neg Q)\rightarrow R" display="inline"><mrow><mrow><mo stretchy="false">(</mo><mrow><mi>P</mi><mo>∧</mo><mrow><mo rspace="0.167em">¬</mo><mi>Q</mi></mrow></mrow><mo stretchy="false">)</mo></mrow><mo stretchy="false">→</mo><mi>R</mi></mrow></math>. Start with</p>
 </div>
 <div id="S2.I9.i1.p2" class="ltx_para">
-<table id="S2.Ex4" class="ltx_equation ltx_eqn_table">
+<table role="presentation" id="S2.Ex4" class="ltx_equation ltx_eqn_table">
 
 <tbody><tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
 <td class="ltx_eqn_cell ltx_eqn_center_padleft"></td>
@@ -469,8 +469,8 @@
 </div>
 </section>
 <section id="S2.SS2.SSS8" class="ltx_subsubsection">
-<h4 class="ltx_title ltx_title_subsubsection">
-<span id="Theorem 2.8" class="ltx_tag ltx_tag_subsubsection">2.2.8 </span>Theorem 2.8 (Important Logical Equivalencies)</h4>
+<h3 class="ltx_title ltx_title_subsubsection">
+<span id="Theorem 2.8" class="ltx_tag ltx_tag_subsubsection">2.2.8 </span>Theorem 2.8 (Important Logical Equivalencies)</h3>
 
 <div id="S2.SS2.SSS8.p1" class="ltx_para">
 <p class="ltx_p">For statements <math id="S2.SS2.SSS8.p1.m1" class="ltx_Math" alttext="P,Q" display="inline"><mrow><mi>P</mi><mo>,</mo><mi>Q</mi></mrow></math>, and <math id="S2.SS2.SSS8.p1.m2" class="ltx_Math" alttext="R" display="inline"><mi>R</mi></math>,</p>
@@ -479,7 +479,7 @@
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l ltx_border_r ltx_border_t">De Morgan’s Laws</th>
 <td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">
-<table class="ltx_tabular ltx_align_middle">
+<table role="presentation" class="ltx_tabular ltx_align_middle">
 <tr class="ltx_tr">
 <td class="ltx_td ltx_align_left"><math id="S2.SS2.SSS8.p1.m3" class="ltx_Math" alttext="\neg(P\wedge Q)\equiv\neg P\vee\neg Q" display="inline"><mrow><mrow><mo>¬</mo><mrow><mo stretchy="false">(</mo><mrow><mi>P</mi><mo>∧</mo><mi>Q</mi></mrow><mo stretchy="false">)</mo></mrow></mrow><mo>≡</mo><mrow><mrow><mo rspace="0.167em">¬</mo><mi>P</mi></mrow><mo>∨</mo><mrow><mo rspace="0.167em">¬</mo><mi>Q</mi></mrow></mrow></mrow></math></td>
 </tr>
@@ -492,7 +492,7 @@
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l ltx_border_r ltx_border_t">Conditional Statements</th>
 <td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">
-<table class="ltx_tabular ltx_align_middle">
+<table role="presentation" class="ltx_tabular ltx_align_middle">
 <tr class="ltx_tr">
 <td class="ltx_td ltx_align_left"><math id="S2.SS2.SSS8.p1.m5" class="ltx_Math" alttext="P\rightarrow Q\equiv\neg Q\rightarrow\neg P\text{ (contrapositive) }" display="inline"><mrow><mi>P</mi><mo stretchy="false">→</mo><mi>Q</mi><mo>≡</mo><mrow><mo rspace="0.167em">¬</mo><mi>Q</mi></mrow><mo stretchy="false">→</mo><mrow><mo rspace="0.167em">¬</mo><mrow><mi>P</mi><mo>⁢</mo><mtext> (contrapositive)</mtext></mrow></mrow></mrow></math></td>
 </tr>
@@ -516,7 +516,7 @@
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_row ltx_border_l ltx_border_r ltx_border_t">Distributive Laws</th>
 <td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">
-<table class="ltx_tabular ltx_align_middle">
+<table role="presentation" class="ltx_tabular ltx_align_middle">
 <tr class="ltx_tr">
 <td class="ltx_td ltx_align_left"><math id="S2.SS2.SSS8.p1.m10" class="ltx_Math" alttext="P\vee(Q\wedge R)\equiv(P\vee Q)\wedge(P\vee R)" display="inline"><mrow><mrow><mi>P</mi><mo>∨</mo><mrow><mo stretchy="false">(</mo><mrow><mi>Q</mi><mo>∧</mo><mi>R</mi></mrow><mo stretchy="false">)</mo></mrow></mrow><mo>≡</mo><mrow><mrow><mo stretchy="false">(</mo><mrow><mi>P</mi><mo>∨</mo><mi>Q</mi></mrow><mo stretchy="false">)</mo></mrow><mo>∧</mo><mrow><mo stretchy="false">(</mo><mrow><mi>P</mi><mo>∨</mo><mi>R</mi></mrow><mo stretchy="false">)</mo></mrow></mrow></mrow></math></td>
 </tr>
@@ -542,8 +542,8 @@
 </div>
 </section>
 <section id="S2.SS2.SSS9" class="ltx_subsubsection">
-<h4 class="ltx_title ltx_title_subsubsection">
-<span class="ltx_tag ltx_tag_subsubsection">2.2.9 </span>Exercises for Section 2.2</h4>
+<h3 class="ltx_title ltx_title_subsubsection">
+<span class="ltx_tag ltx_tag_subsubsection">2.2.9 </span>Exercises for Section 2.2</h3>
 
 <div id="S2.SS2.SSS9.p1" class="ltx_para">
 <ol id="S2.I10" class="ltx_enumerate">
@@ -699,7 +699,7 @@
 <p class="ltx_p">Use truth tables to prove the following logical equivalency from Theorem 2.8:</p>
 </div>
 <div id="S2.I10.i6.p2" class="ltx_para">
-<table id="S2.Ex5" class="ltx_equation ltx_eqn_table">
+<table role="presentation" id="S2.Ex5" class="ltx_equation ltx_eqn_table">
 
 <tbody><tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
 <td class="ltx_eqn_cell ltx_eqn_center_padleft"></td>
@@ -913,7 +913,7 @@
 <p class="ltx_p">Let <math id="S2.I10.i12.p1.m1" class="ltx_Math" alttext="x" display="inline"><mi>x</mi></math> be a real number. Consider the following conditional statement:</p>
 </div>
 <div id="S2.I10.i12.p2" class="ltx_para">
-<table id="S2.Ex6" class="ltx_equation ltx_eqn_table">
+<table role="presentation" id="S2.Ex6" class="ltx_equation ltx_eqn_table">
 
 <tbody><tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
 <td class="ltx_eqn_cell ltx_eqn_center_padleft"></td>
@@ -974,8 +974,8 @@
 </div>
 </section>
 <section id="S2.SS2.SSS10" class="ltx_subsubsection">
-<h4 class="ltx_title ltx_title_subsubsection">
-<span class="ltx_tag ltx_tag_subsubsection">2.2.10 </span>Explorations and Activities</h4>
+<h3 class="ltx_title ltx_title_subsubsection">
+<span class="ltx_tag ltx_tag_subsubsection">2.2.10 </span>Explorations and Activities</h3>
 
 <div id="S2.SS2.SSS10.p1" class="ltx_para">
 <ol id="S2.I11" class="ltx_enumerate">
@@ -993,7 +993,7 @@
 <p class="ltx_p">We notice that we can write this statement in the following symbolic form:</p>
 </div>
 <div id="S2.I11.i13.p4" class="ltx_para">
-<table id="S2.Ex7" class="ltx_equation ltx_eqn_table">
+<table role="presentation" id="S2.Ex7" class="ltx_equation ltx_eqn_table">
 
 <tbody><tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
 <td class="ltx_eqn_cell ltx_eqn_center_padleft"></td>
@@ -1034,8 +1034,9 @@
 </section>
 </article>
 </div>
-<footer class="ltx_page_footer">
-<div class="ltx_page_logo"><a href="https://scholarworks.gvsu.edu/books/24/">Mathematical Reasoning: Writing and Proof, Version 3</a> © 2020 by <a href="https://www.tedsundstrom.com/">Ted Sundstrom</a> is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a><img src="https://mirrors.creativecommons.org/presskit/icons/cc.svg" alt="" style="max-width: 1em;max-height:1em;margin-left: .2em;"><img src="https://mirrors.creativecommons.org/presskit/icons/by.svg" alt="" style="max-width: 1em;max-height:1em;margin-left: .2em;"><img src="https://mirrors.creativecommons.org/presskit/icons/nc.svg" alt="" style="max-width: 1em;max-height:1em;margin-left: .2em;"><img src="https://mirrors.creativecommons.org/presskit/icons/sa.svg" alt="" style="max-width: 1em;max-height:1em;margin-left: .2em;"></div></footer>
+<footer role="contentinfo" class="ltx_page_footer">
+<div class="ltx_page_logo"><a href="https://scholarworks.gvsu.edu/books/24/">Mathematical Reasoning: Writing and Proof, Version 3</a> © 2020 by <a href="https://www.tedsundstrom.com/">Ted Sundstrom</a> is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a><img src="https://mirrors.creativecommons.org/presskit/icons/cc.svg" alt="Creative Commons Logo" style="max-width: 1em;max-height:1em;margin-left: .2em;"><img src="https://mirrors.creativecommons.org/presskit/icons/by.svg" alt="Attribution" style="max-width: 1em;max-height:1em;margin-left: .2em;"><img src="https://mirrors.creativecommons.org/presskit/icons/nc.svg" alt="NonCommercial" style="max-width: 1em;max-height:1em;margin-left: .2em;"><img src="https://mirrors.creativecommons.org/presskit/icons/sa.svg" alt="ShareAlike" style="max-width: 1em;max-height:1em;margin-left: .2em;"></div></footer>
+</div></footer>
 </div>
 </body>
 </html>
