Update 3-4.html accessibility changes

--- a/teaching/300/3-4.html
+++ b/teaching/300/3-4.html
@@ -22,12 +22,12 @@
 <span class="ltx_tag ltx_tag_section">3 </span>Constructing and Writing Proofs in Mathematics</h1>
 
 <section id="S3.SS4" class="ltx_subsection">
-<h2 class="ltx_title ltx_title_subsection">
-<span class="ltx_tag ltx_tag_subsection">3.4 </span>Using Cases in Proofs</h2>
+<h1 class="ltx_title ltx_title_subsection">
+<span class="ltx_tag ltx_tag_subsection">3.4 </span>Using Cases in Proofs</h1>
 
 <section id="S3.SS4.SSS1" class="ltx_subsubsection">
-<h3 class="ltx_title ltx_title_subsubsection">
-<span class="ltx_tag ltx_tag_subsubsection">3.4.1 </span>Beginning Activity 1 (Using a Logical Equivalency)</h3>
+<h2 class="ltx_title ltx_title_subsubsection">
+<span class="ltx_tag ltx_tag_subsubsection">3.4.1 </span>Beginning Activity 1 (Using a Logical Equivalency)</h2>
 
 <div id="S3.SS4.SSS1.p1" class="ltx_para">
 <ol id="S3.I1" class="ltx_enumerate">
@@ -71,14 +71,14 @@
 </div>
 </section>
 <section id="S3.SS4.SSS2" class="ltx_subsubsection">
-<h3 class="ltx_title ltx_title_subsubsection">
-<span class="ltx_tag ltx_tag_subsubsection">3.4.2 </span>Beginning Activity 2 (Using Cases in a Proof)</h3>
+<h2 class="ltx_title ltx_title_subsubsection">
+<span class="ltx_tag ltx_tag_subsubsection">3.4.2 </span>Beginning Activity 2 (Using Cases in a Proof)</h2>
 
 <div id="S3.SS4.SSS2.p1" class="ltx_para">
 <p class="ltx_p">The work in Beginning Activity 1 was meant to introduce the idea of using cases in a proof. The method of using cases is often used when the hypothesis of the proposition is a disjunction. This is justified by the logical equivalency</p>
 </div>
 <div id="S3.SS4.SSS2.p2" class="ltx_para">
-<table id="S3.Ex1" class="ltx_equation ltx_eqn_table">
+<table role="presentation" id="S3.Ex1" class="ltx_equation ltx_eqn_table">
 
 <tbody><tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
 <td class="ltx_eqn_cell ltx_eqn_center_padleft"></td>
@@ -144,8 +144,8 @@
 </div>
 </section>
 <section id="S3.SS4.SSS3" class="ltx_subsubsection">
-<h3 class="ltx_title ltx_title_subsubsection">
-<span class="ltx_tag ltx_tag_subsubsection">3.4.3 </span>Some Common Situations to Use Cases</h3>
+<h2 class="ltx_title ltx_title_subsubsection">
+<span class="ltx_tag ltx_tag_subsubsection">3.4.3 </span>Some Common Situations to Use Cases</h2>
 
 <div id="S3.SS4.SSS3.p1" class="ltx_para">
 <p class="ltx_p">When using cases in a proof, the main rule is that the cases must be chosen so that they exhaust all possibilities for an object <math id="S3.SS4.SSS3.p1.m1" class="ltx_Math" data-alttext="x" display="inline"><mi>x</mi></math> in the hypothesis of the original proposition. Following are some common uses of cases in proofs.</p>
@@ -177,7 +177,7 @@
 <p class="ltx_p">When the hypothesis is, "<math id="S3.SS4.SSS3.p6.m1" class="ltx_Math" data-alttext="a" display="inline"><mi>a</mi></math> and <math id="S3.SS4.SSS3.p6.m2" class="ltx_Math" data-alttext="b" display="inline"><mi>b</mi></math> are real numbers."</p>
 </div>
 <div id="S3.SS4.SSS3.p7" class="ltx_para">
-<table id="S3.Ex2" class="ltx_equation ltx_eqn_table">
+<table role="presentation" id="S3.Ex2" class="ltx_equation ltx_eqn_table">
 
 <tbody><tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
 <td class="ltx_eqn_cell ltx_eqn_center_padleft"></td>
@@ -191,16 +191,16 @@
 </div>
 </section>
 <section id="S3.SS4.SSS4" class="ltx_subsubsection">
-<h3 class="ltx_title ltx_title_subsubsection">
-<span class="ltx_tag ltx_tag_subsubsection">3.4.4 </span>Writing Guidelines for a Proof Using Cases</h3>
+<h2 class="ltx_title ltx_title_subsubsection">
+<span class="ltx_tag ltx_tag_subsubsection">3.4.4 </span>Writing Guidelines for a Proof Using Cases</h2>
 
 <div id="S3.SS4.SSS4.p1" class="ltx_para">
 <p class="ltx_p">When writing a proof that uses cases, we use all the other writing guidelines. In addition, we make sure that it is clear where each case begins. This can be done by using a new paragraph with a label such as "Case 1," or it can be done by starting a paragraph with a phrase such as, "In the case where …."</p>
 </div>
 </section>
 <section id="S3.SS4.SSS5" class="ltx_subsubsection">
-<h3 class="ltx_title ltx_title_subsubsection">
-<span class="ltx_tag ltx_tag_subsubsection">3.4.5 </span>Progress Check 3.21 (Using Cases: <math id="S3.SS4.SSS5.m1" class="ltx_Math" data-alttext="\boldsymbol{n}" display="inline"><mi>𝒏</mi></math> Is Even or <math id="S3.SS4.SSS5.m2" class="ltx_Math" data-alttext="\boldsymbol{n}" display="inline"><mi>𝒏</mi></math> Is Odd)</h3>
+<h2 class="ltx_title ltx_title_subsubsection">
+<span class="ltx_tag ltx_tag_subsubsection">3.4.5 </span>Progress Check 3.21 (Using Cases: <math id="S3.SS4.SSS5.m1" class="ltx_Math" data-alttext="\boldsymbol{n}" display="inline"><mi>𝒏</mi></math> Is Even or <math id="S3.SS4.SSS5.m2" class="ltx_Math" data-alttext="\boldsymbol{n}" display="inline"><mi>𝒏</mi></math> Is Odd)</h2>
 
 <div id="S3.SS4.SSS5.p1" class="ltx_para">
 <p class="ltx_p">Complete the proof of the following proposition:
@@ -227,7 +227,7 @@
 <br class="ltx_break">by <math id="S3.SS4.SSS5.p7.m3" class="ltx_Math" data-alttext="\frac{1}{a}" display="inline"><mfrac><mn>1</mn><mi>a</mi></mfrac></math> and obtain</p>
 </div>
 <div id="S3.SS4.SSS5.p8" class="ltx_para">
-<table id="S3.EGx1" class="ltx_equationgroup ltx_eqn_align ltx_eqn_table">
+<table role="presentation" id="S3.EGx1" class="ltx_equationgroup ltx_eqn_align ltx_eqn_table">
 
 <tbody id="S3.Ex3"><tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
 <td class="ltx_eqn_cell ltx_eqn_center_padleft"></td>
@@ -248,14 +248,14 @@
 </div>
 </section>
 <section id="S3.SS4.SSS6" class="ltx_subsubsection">
-<h3 class="ltx_title ltx_title_subsubsection">
-<span class="ltx_tag ltx_tag_subsubsection">3.4.6 </span>Absolute Value</h3>
+<h2 class="ltx_title ltx_title_subsubsection">
+<span class="ltx_tag ltx_tag_subsubsection">3.4.6 </span>Absolute Value</h2>
 
 <div id="S3.SS4.SSS6.p1" class="ltx_para">
 <p class="ltx_p">Most students by now have studied the concept of the absolute value of a real number. We use the notation <math id="S3.SS4.SSS6.p1.m1" class="ltx_Math" data-alttext="|x|" display="inline"><mrow><mo stretchy="false">|</mo><mi>x</mi><mo stretchy="false">|</mo></mrow></math> to stand for the absolute value of the real number <math id="S3.SS4.SSS6.p1.m2" class="ltx_Math" data-alttext="x" display="inline"><mi>x</mi></math>. One way to think of the absolute value of <math id="S3.SS4.SSS6.p1.m3" class="ltx_Math" data-alttext="x" display="inline"><mi>x</mi></math> is as the "distance" between <math id="S3.SS4.SSS6.p1.m4" class="ltx_Math" data-alttext="x" display="inline"><mi>x</mi></math> and 0 on the number line. For example,</p>
 </div>
 <div id="S3.SS4.SSS6.p2" class="ltx_para">
-<table id="S3.Ex5" class="ltx_equation ltx_eqn_table">
+<table role="presentation" id="S3.Ex5" class="ltx_equation ltx_eqn_table">
 
 <tbody><tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
 <td class="ltx_eqn_cell ltx_eqn_center_padleft"></td>
@@ -271,7 +271,7 @@
 <p class="ltx_p"><span class="ltx_text ltx_font_bold">Definition</span>. For <math id="S3.SS4.SSS6.p4.m1" class="ltx_Math" data-alttext="x\in\mathbb{R}" display="inline"><mrow><mi>x</mi><mo>∈</mo><mi>ℝ</mi></mrow></math>, we define <math id="S3.SS4.SSS6.p4.m2" class="ltx_Math" data-alttext="|x|" display="inline"><mrow><mo stretchy="false">|</mo><mi>x</mi><mo stretchy="false">|</mo></mrow></math>, called the <span class="ltx_text ltx_font_bold">absolute value of</span> <math id="S3.SS4.SSS6.p4.m3" class="ltx_Math" data-alttext="\boldsymbol{x}" display="inline"><mi>𝒙</mi></math>, by</p>
 </div>
 <div id="S3.SS4.SSS6.p5" class="ltx_para">
-<table id="S3.Ex6" class="ltx_equation ltx_eqn_table">
+<table role="presentation" id="S3.Ex6" class="ltx_equation ltx_eqn_table">
 
 <tbody><tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
 <td class="ltx_eqn_cell ltx_eqn_center_padleft"></td>
@@ -333,7 +333,7 @@
 <p class="ltx_p">We will now prove that if <math id="S3.SS4.SSS6.p13.m1" class="ltx_Math" data-alttext="x=a" display="inline"><mrow><mi>x</mi><mo>=</mo><mi>a</mi></mrow></math> or <math id="S3.SS4.SSS6.p13.m2" class="ltx_Math" data-alttext="x=-a" display="inline"><mrow><mi>x</mi><mo>=</mo><mrow><mo>−</mo><mi>a</mi></mrow></mrow></math>, then <math id="S3.SS4.SSS6.p13.m3" class="ltx_Math" data-alttext="|x|=a" display="inline"><mrow><mrow><mo stretchy="false">|</mo><mi>x</mi><mo stretchy="false">|</mo></mrow><mo>=</mo><mi>a</mi></mrow></math>. We start by assuming that <math id="S3.SS4.SSS6.p13.m4" class="ltx_Math" data-alttext="x=a" display="inline"><mrow><mi>x</mi><mo>=</mo><mi>a</mi></mrow></math> or <math id="S3.SS4.SSS6.p13.m5" class="ltx_Math" data-alttext="x=-a" display="inline"><mrow><mi>x</mi><mo>=</mo><mrow><mo>−</mo><mi>a</mi></mrow></mrow></math>. Since the hypothesis of this conditional statement is a disjunction, we use two cases. When <math id="S3.SS4.SSS6.p13.m6" class="ltx_Math" data-alttext="x=a" display="inline"><mrow><mi>x</mi><mo>=</mo><mi>a</mi></mrow></math>, we see that</p>
 </div>
 <div id="S3.SS4.SSS6.p14" class="ltx_para">
-<table id="S3.Ex7" class="ltx_equation ltx_eqn_table">
+<table role="presentation" id="S3.Ex7" class="ltx_equation ltx_eqn_table">
 
 <tbody><tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
 <td class="ltx_eqn_cell ltx_eqn_center_padleft"></td>
@@ -346,7 +346,7 @@
 <p class="ltx_p">When <math id="S3.SS4.SSS6.p15.m1" class="ltx_Math" data-alttext="x=-a" display="inline"><mrow><mi>x</mi><mo>=</mo><mrow><mo>−</mo><mi>a</mi></mrow></mrow></math>, we conclude that</p>
 </div>
 <div id="S3.SS4.SSS6.p16" class="ltx_para">
-<table id="S3.Ex8" class="ltx_equation ltx_eqn_table">
+<table role="presentation" id="S3.Ex8" class="ltx_equation ltx_eqn_table">
 
 <tbody><tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
 <td class="ltx_eqn_cell ltx_eqn_center_padleft"></td>
@@ -360,8 +360,8 @@
 </div>
 </section>
 <section id="S3.SS4.SSS7" class="ltx_subsubsection">
-<h3 class="ltx_title ltx_title_subsubsection">
-<span class="ltx_tag ltx_tag_subsubsection">3.4.7 </span>Progress Check 3.24 (Equations Involving Absolute Values)</h3>
+<h2 class="ltx_title ltx_title_subsubsection">
+<span class="ltx_tag ltx_tag_subsubsection">3.4.7 </span>Progress Check 3.24 (Equations Involving Absolute Values)</h2>
 
 <div id="S3.SS4.SSS7.p1" class="ltx_para">
 <ol id="S3.I6" class="ltx_enumerate">
@@ -479,8 +479,8 @@
 </div>
 </section>
 <section id="S3.SS4.SSS8" class="ltx_subsubsection">
-<h3 class="ltx_title ltx_title_subsubsection">
-<span class="ltx_tag ltx_tag_subsubsection">3.4.8 </span>Exercises for Section 3.4</h3>
+<h2 class="ltx_title ltx_title_subsubsection">
+<span class="ltx_tag ltx_tag_subsubsection">3.4.8 </span>Exercises for Section 3.4</h2>
 
 <div id="S3.SS4.SSS8.p1" class="ltx_para">
 <ol id="S3.I10" class="ltx_enumerate">
@@ -699,7 +699,7 @@ Hint: Do not use the quadratic formula. Use a proof by contradiction and recall 
 <br class="ltx_break">So we let <math id="S3.I10.i13.I1.i1.p2.m6" class="ltx_Math" data-alttext="a" display="inline"><mi>a</mi></math> and <math id="S3.I10.i13.I1.i1.p2.m7" class="ltx_Math" data-alttext="b" display="inline"><mi>b</mi></math> be nonzero integers and assume that the natural number <math id="S3.I10.i13.I1.i1.p2.m8" class="ltx_Math" data-alttext="n" display="inline"><mi>n</mi></math> is a solution of the equation <math id="S3.I10.i13.I1.i1.p2.m9" class="ltx_Math" data-alttext="ax^{3}+2bx=3" display="inline"><mrow><mrow><mrow><mi>a</mi><mo>⁢</mo><msup><mi>x</mi><mn>3</mn></msup></mrow><mo>+</mo><mrow><mn>2</mn><mo>⁢</mo><mi>b</mi><mo>⁢</mo><mi>x</mi></mrow></mrow><mo>=</mo><mn>3</mn></mrow></math>. So we have</p>
 </div>
 <div id="S3.I10.i13.I1.i1.p3" class="ltx_para">
-<table id="S3.EGx2" class="ltx_equationgroup ltx_eqn_align ltx_eqn_table">
+<table role="presentation" id="S3.EGx2" class="ltx_equationgroup ltx_eqn_align ltx_eqn_table">
 
 <tbody id="S3.Ex9"><tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
 <td class="ltx_eqn_cell ltx_eqn_center_padleft"></td>
@@ -728,7 +728,7 @@ Hint: Do not use the quadratic formula. Use a proof by contradiction and recall 
 <p class="ltx_p"><span class="ltx_text ltx_font_italic">Proof</span>. We will use a proof by contradiction. Let us assume that there exist nonzero integers <math id="S3.I10.i13.I1.i2.p2.m1" class="ltx_Math" data-alttext="a" display="inline"><mi>a</mi></math> and <math id="S3.I10.i13.I1.i2.p2.m2" class="ltx_Math" data-alttext="b" display="inline"><mi>b</mi></math> such that <math id="S3.I10.i13.I1.i2.p2.m3" class="ltx_Math" data-alttext="a+2b=3" display="inline"><mrow><mrow><mi>a</mi><mo>+</mo><mrow><mn>2</mn><mo>⁢</mo><mi>b</mi></mrow></mrow><mo>=</mo><mn>3</mn></mrow></math> and <math id="S3.I10.i13.I1.i2.p2.m4" class="ltx_Math" data-alttext="9a+2b=1" display="inline"><mrow><mrow><mrow><mn>9</mn><mo>⁢</mo><mi>a</mi></mrow><mo>+</mo><mrow><mn>2</mn><mo>⁢</mo><mi>b</mi></mrow></mrow><mo>=</mo><mn>1</mn></mrow></math> and <math id="S3.I10.i13.I1.i2.p2.m5" class="ltx_Math" data-alttext="an^{3}+2bn=3" display="inline"><mrow><mrow><mrow><mi>a</mi><mo>⁢</mo><msup><mi>n</mi><mn>3</mn></msup></mrow><mo>+</mo><mrow><mn>2</mn><mo>⁢</mo><mi>b</mi><mo>⁢</mo><mi>n</mi></mrow></mrow><mo>=</mo><mn>3</mn></mrow></math>, where <math id="S3.I10.i13.I1.i2.p2.m6" class="ltx_Math" data-alttext="n" display="inline"><mi>n</mi></math> is a natural number. First, we will solve one equation for <math id="S3.I10.i13.I1.i2.p2.m7" class="ltx_Math" data-alttext="2b" display="inline"><mrow><mn>2</mn><mo>⁢</mo><mi>b</mi></mrow></math>; doing this, we obtain</p>
 </div>
 <div id="S3.I10.i13.I1.i2.p3" class="ltx_para">
-<table id="S3.EGx3" class="ltx_equationgroup ltx_eqn_align ltx_eqn_table">
+<table role="presentation" id="S3.EGx3" class="ltx_equationgroup ltx_eqn_align ltx_eqn_table">
 
 <tbody id="S3.Ex11"><tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
 <td class="ltx_eqn_cell ltx_eqn_center_padleft"></td>
@@ -749,7 +749,7 @@ Hint: Do not use the quadratic formula. Use a proof by contradiction and recall 
 <p class="ltx_p">We can now substitute for <math id="S3.I10.i13.I1.i2.p4.m1" class="ltx_Math" data-alttext="2b" display="inline"><mrow><mn>2</mn><mo>⁢</mo><mi>b</mi></mrow></math> in <math id="S3.I10.i13.I1.i2.p4.m2" class="ltx_Math" data-alttext="an^{3}+2bn=3" display="inline"><mrow><mrow><mrow><mi>a</mi><mo>⁢</mo><msup><mi>n</mi><mn>3</mn></msup></mrow><mo>+</mo><mrow><mn>2</mn><mo>⁢</mo><mi>b</mi><mo>⁢</mo><mi>n</mi></mrow></mrow><mo>=</mo><mn>3</mn></mrow></math>. This gives</p>
 </div>
 <div id="S3.I10.i13.I1.i2.p5" class="ltx_para">
-<table id="S3.EGx4" class="ltx_equationgroup ltx_eqn_align ltx_eqn_table">
+<table role="presentation" id="S3.EGx4" class="ltx_equationgroup ltx_eqn_align ltx_eqn_table">
 
 <tbody id="S3.Ex13"><tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
 <td class="ltx_eqn_cell ltx_eqn_center_padleft"></td>
@@ -783,8 +783,8 @@ Hint: Do not use the quadratic formula. Use a proof by contradiction and recall 
 </div>
 </section>
 <section id="S3.SS4.SSS9" class="ltx_subsubsection">
-<h3 class="ltx_title ltx_title_subsubsection">
-<span class="ltx_tag ltx_tag_subsubsection">3.4.9 </span>Explorations and Activities</h3>
+<h2 class="ltx_title ltx_title_subsubsection">
+<span class="ltx_tag ltx_tag_subsubsection">3.4.9 </span>Explorations and Activities</h2>
 
 <div id="S3.SS4.SSS9.p1" class="ltx_para">
 <ol id="S3.I11" class="ltx_enumerate">
