Update 3-6.html accessibility changes

--- a/teaching/300/3-6.html
+++ b/teaching/300/3-6.html
@@ -667,67 +667,67 @@ Hint: We have proved that <math id="S3.I4.i5.p1.m4" class="ltx_Math" alttext="\s
 <li id="S3.I6.i1" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_item">•</span> 
 <div id="S3.I6.i1.p1" class="ltx_para">
-<p class="ltx_p">Divides, divisor, <a href="https://johnweeks03.github.io/teaching/300/3-1.html">Section 3.1</a></p>
+<p class="ltx_p">Divides, divisor, Section 3.1</p>
 </div>
 </li>
 <li id="S3.I6.i2" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_item">•</span> 
 <div id="S3.I6.i2.p1" class="ltx_para">
-<p class="ltx_p">Factor, multiple, <a href="https://johnweeks03.github.io/teaching/300/3-1.html">Section 3.1</a></p>
+<p class="ltx_p">Factor, multiple, Section 3.1</p>
 </div>
 </li>
 <li id="S3.I6.i3" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_item">•</span> 
 <div id="S3.I6.i3.p1" class="ltx_para">
-<p class="ltx_p">Proof, <a href="https://johnweeks03.github.io/teaching/300/3-1.html">Section 3.1</a></p>
+<p class="ltx_p">Proof, Section 3.1</p>
 </div>
 </li>
 <li id="S3.I6.i4" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_item">•</span> 
 <div id="S3.I6.i4.p1" class="ltx_para">
-<p class="ltx_p">Undefined term, <a href="https://johnweeks03.github.io/teaching/300/3-1.html">Section 3.1</a></p>
+<p class="ltx_p">Undefined term, Section 3.1</p>
 </div>
 </li>
 <li id="S3.I6.i5" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_item">•</span> 
 <div id="S3.I6.i5.p1" class="ltx_para">
-<p class="ltx_p">Axiom, <a href="https://johnweeks03.github.io/teaching/300/3-1.html">Section 3.1</a></p>
+<p class="ltx_p">Axiom, Section 3.1</p>
 </div>
 </li>
 <li id="S3.I6.i6" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_item">•</span> 
 <div id="S3.I6.i6.p1" class="ltx_para">
-<p class="ltx_p">Definition, <a href="https://johnweeks03.github.io/teaching/300/3-1.html">Section 3.1</a></p>
+<p class="ltx_p">Definition, Section 3.1</p>
 </div>
 </li>
 <li id="S3.I6.i7" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_item">•</span> 
 <div id="S3.I6.i7.p1" class="ltx_para">
-<p class="ltx_p">Conjecture, <a href="https://johnweeks03.github.io/teaching/300/3-1.html">Section 3.1</a></p>
+<p class="ltx_p">Conjecture, Section 3.1</p>
 </div>
 </li>
 <li id="S3.I6.i8" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_item">•</span> 
 <div id="S3.I6.i8.p1" class="ltx_para">
-<p class="ltx_p">Theorem, <a href="https://johnweeks03.github.io/teaching/300/3-1.html">Section 3.1</a></p>
+<p class="ltx_p">Theorem, Section 3.1</p>
 </div>
 </li>
 <li id="S3.I6.i9" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_item">•</span> 
 <div id="S3.I6.i9.p1" class="ltx_para">
-<p class="ltx_p">Proposition, <a href="https://johnweeks03.github.io/teaching/300/3-1.html">Section 3.1</a></p>
+<p class="ltx_p">Proposition, Section 3.1</p>
 </div>
 </li>
 <li id="S3.I6.i10" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_item">•</span> 
 <div id="S3.I6.i10.p1" class="ltx_para">
-<p class="ltx_p">Lemma, <a href="https://johnweeks03.github.io/teaching/300/3-1.html">Section 3.1</a></p>
+<p class="ltx_p">Lemma, Section 3.1</p>
 </div>
 </li>
 <li id="S3.I6.i11" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_item">•</span> 
 <div id="S3.I6.i11.p1" class="ltx_para">
-<p class="ltx_p">Corollary, <a href="https://johnweeks03.github.io/teaching/300/3-1.html">Section 3.1</a></p>
+<p class="ltx_p">Corollary, Section 3.1</p>
 </div>
 </li>
 <li id="S3.I6.i12" class="ltx_item" style="list-style-type:none;">
@@ -745,13 +745,13 @@ Hint: We have proved that <math id="S3.I4.i5.p1.m4" class="ltx_Math" alttext="\s
 <li id="S3.I6.i14" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_item">•</span> 
 <div id="S3.I6.i14.p1" class="ltx_para">
-<p class="ltx_p">Contradiction, <a href="https://johnweeks03.github.io/teaching/300/2-1.html">Section 2.1</a></p>
+<p class="ltx_p">Contradiction, Section 2.1</p>
 </div>
 </li>
 <li id="S3.I6.i15" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_item">•</span> 
 <div id="S3.I6.i15.p1" class="ltx_para">
-<p class="ltx_p">Absolute value, <a href="https://johnweeks03.github.io/teaching/300/3-1.html">Section 3.1</a></p>
+<p class="ltx_p">Absolute value, Section 3.1</p>
 </div>
 </li>
 </ul>
