Update 4-3.html accessibility changes

--- a/teaching/300/4-3.html
+++ b/teaching/300/4-3.html
@@ -311,9 +311,9 @@ n}." display="inline"><mrow><mrow><mrow><msub><mi>S</mi><mn>1</mn></msub><mo>=</
 <table class="ltx_tabular ltx_centering ltx_align_middle">
 <tbody class="ltx_tbody">
 <tr class="ltx_tr">
-<td class="ltx_td ltx_align_left ltx_border_l ltx_border_r ltx_border_t">Step</td>
-<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">Know</td>
-<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">Reason</td>
+<th class="ltx_td ltx_align_left ltx_border_l ltx_border_r ltx_border_t">Step</th>
+<th class="ltx_td ltx_align_left ltx_border_r ltx_border_t">Know</th>
+<th class="ltx_td ltx_align_left ltx_border_r ltx_border_t">Reason</th>
 </tr>
 <tr class="ltx_tr">
 <td class="ltx_td ltx_align_left ltx_border_l ltx_border_r ltx_border_t"><math id="S4.SS3.SSS2.m1" class="ltx_Math" data-alttext="P" display="inline"><mi>P</mi></math></td>
